# fivelaunch

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  electron-builder.config.cjs  electron.vite.config.ts  fivelaunch-project-post.md  index.html  index.preview.html  package.json  plan.md  pnpm-lock.yaml  tailwind.config.js  tsconfig.node.json  tsconfig.web.json  vite.config.ts  vite.preview.config.ts
.claude/: launch.json
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md  question.md
.github/workflows/: build.yml  release.yml
resources/: settings-template.xml
scripts/: release.js  tag-release.js  win-dist-fast.js
src/: App.svelte  app.css  main.ts  preview.ts
src-tauri/: Cargo.toml  installer-info.txt  tauri.conf.json
src-tauri/benches/: core_bench.rs
src-tauri/capabilities/: default.json
src-tauri/resources/: settings-template.xml
src-tauri/src/: commands.rs  lib.rs  tray.rs
src-tauri/src/core/: args.rs  backups.rs  clients.rs  file_sync.rs  gpu.rs  gta_schema.rs  gta_settings.rs  launch.rs  linking.rs  log_store.rs  mirror.rs  mod.rs  paths.rs  plugins_sync.rs  process.rs  reshade.rs  settings.rs  shortcut.rs  snapshot.rs  update_checker.rs
src/assets/fonts/: geist-pixel.css
src/lib/: api.ts  gtaSettingsMap.ts  theme.test.ts  types.ts  updater.ts
src/lib/actions/: tooltip.ts
src/lib/components/: ClientDetailsDialog.svelte  CreateClientDialog.svelte  DuplicateClientDialog.svelte  FirstRunDialog.svelte  GtaSettingsDialog.svelte  HistoryDialog.svelte  LogsPanel.svelte  RefsDialog.svelte  SettingsDialog.svelte  TitleBar.svelte  UpdateDialog.svelte
src/lib/design/: DESIGN.md  StyleGuide.svelte
src/main/: index.ts  types.ts
src/main/app/: args.ts  assets.ts  ipc.ts  logging.ts  managers.ts  tray.ts  window.ts
src/preload/: index.ts
src/renderer/: index.html
src/shared/: gtaSettingsMap.ts
src/tests/: App.test.ts  setup.ts
v1/: README.md  components.json  electron-builder.config.cjs  package.json  pnpm-lock.yaml  tsconfig.json
v1/scripts/: generate-win-icon.js  release.js  tag-release.js  zip-dist.js
v2/: PERF.md  PLAN.md  README.md  package.json  pnpm-lock.yaml  vite.config.ts
v2/src/: App.svelte  app.css
v2/src-tauri/: Cargo.toml  tauri.conf.json
v2/src-tauri/capabilities/: default.json
v2/src-tauri/icons/: icon.icns
v2/src-tauri/src/: commands.rs  lib.rs  main.rs
v2/src-tauri/src/core/: fs_retry.rs  hash.rs  launch.rs  linking.rs  mod.rs  process.rs  stats.rs
(+70 files in other folders)
