[package]
name = "fivelaunch"
version = "2.7.0"
description = "FiveLaunch - launch FiveM with select mods and settings"
authors = ["Lawson Hart"]
license = "SEE LICENSE IN LICENSE"
repository = "https://github.com/oyuh/fivelaunch"
homepage = "https://fivelaunch.help"
edition = "2021"
rust-version = "1.82"

[lib]
name = "fivelaunch_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.6.3", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = { version = "0.4", features = ["std"] }
tauri = { version = "2.11.3", features = ["tray-icon"] }
tauri-plugin-dialog = "2"
tauri-plugin-opener = "2"
tauri-plugin-single-instance = "2"
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
uuid = { version = "1", features = ["v4"] }
walkdir = "2"
junction = "2"
sysinfo = "0.39"
time = { version = "0.3", features = ["formatting"] }
quick-xml = "0.41"
indexmap = { version = "2", features = ["serde"] }
ureq = { version = "3", features = ["json"] }
mslnk = "0.1"
dirs = "6"
winreg = "0.55"

[dev-dependencies]
tempfile = "3"
criterion = "0.8"
filetime = "0.2"

[[bench]]
name = "core_bench"
harness = false

# Small + fast release binary: this is a big part of the v2 pitch.
[profile.release]
codegen-units = 1
lto = true
opt-level = "s"
strip = true
panic = "abort"
